--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,49 +1,66 @@
 // RESPONSIVE BREAKPOINTS
-$bp-largest: 75em;   // 1200px
-$bp-large: 62.5em;   // 1000px
-$bp-medium: 50em;    // 800px;
-$bp-small: 37.5em;    // 600px;
+$bp-largest: 75em; // 1200px
+$bp-large: 62.5em; // 1000px
+$bp-medium: 50em; // 800px;
+$bp-small: 37.5em; // 600px;
 
 *,
 *::after,
 *::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 
 html {
-    // This defines what 1rem is
-    font-size: 62.5%;
+  // This defines what 1rem is
+  font-size: 62.5%;
 }
 
 body {
-    box-sizing: border-box;
+  box-sizing: border-box;
+
+  @media only screen and (max-width: $bp-largest) {
+    font-size: 50%;
+  }
+
+  
+  //font-family: 'Open Sans', sans-serif;
+
+  .container {
+    //grid-template-rows: 1fr;
+    //grid-template-rows: repeat(auto-fit, minmax(50rem, 1fr));
+    //grid-template-columns: [full-start] repeat(4, minmax(5rem, 1fr)) [full-end];
+    //grid-template-rows: 100vh min-content 40vw repeat(3, min-content);
+    ///grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(2, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
 
     @media only screen and (max-width: $bp-largest) {
-        font-size: 50%;
     }
 
+    @media only screen and (max-width: $bp-large) {
+    }
+
+    @media only screen and (max-width: $bp-medium) {
+    }
+  }
+
+  img {
+    width: 100%;
+    height: auto;
+  }
+
+  video {
+    width: 100%;
+    height: auto;
+  }
+
+  .bg-white {
+    background: white;
     color: #333;
-    //font-family: 'Open Sans', sans-serif;
+  }
 
-
-    img {
-        width: 100%;
-        height: auto;
-      }
-
-      video {
-          width: 100%;
-          height: auto;
-      }
-
-      .bg-white {
-          background: white;
-      }
-
-      .border-white {
-        //border: 1rem solid white;
-    }
-      
+  .bg-black {
+    background: rgba(6, 9, 10, 0.7);
+    color: white;
+  }
 }
