--- a/sass/helpers.css
+++ b/sass/helpers.css
@@ -1,8 +1,26 @@
+.visible {
+  display: block;
+}
+
+.not-visible {
+  display: none;
+  visibility: hidden;
+}
+
 .fade {
   -webkit-animation-name: fade;
-  -webkit-animation-duration: .5s;
+  -webkit-animation-duration: .1s;
   animation-name: fade;
-  animation-duration: .5s;
+  animation-duration: .1s;
+}
+
+.stick {
+  position: -webkit-sticky;
+  position: sticky;
+}
+
+.zindex {
+  z-index: -200;
 }
 
 @-webkit-keyframes fade {
