--- a/sass/helpers.scss
+++ b/sass/helpers.scss
@@ -1,14 +1,25 @@
 .visible {
+  display: block;
 }
 
 .not-visible {
+  display: none;
+  visibility: hidden;
 }
 
 .fade {
   -webkit-animation-name: fade;
-  -webkit-animation-duration: .5s;
+  -webkit-animation-duration: .1s;
   animation-name: fade;
-  animation-duration: .5s;
+  animation-duration: .1s;
+}
+
+.stick {
+  position:sticky;
+}
+
+.zindex {
+  z-index: -200;
 }
 
 @-webkit-keyframes fade {
