--- a/sass/main.css
+++ b/sass/main.css
@@ -1,8 +1,26 @@
+.visible {
+  display: block;
+}
+
+.not-visible {
+  display: none;
+  visibility: hidden;
+}
+
 .fade {
   -webkit-animation-name: fade;
-  -webkit-animation-duration: .5s;
+  -webkit-animation-duration: .1s;
   animation-name: fade;
-  animation-duration: .5s;
+  animation-duration: .1s;
+}
+
+.stick {
+  position: -webkit-sticky;
+  position: sticky;
+}
+
+.zindex {
+  z-index: -200;
 }
 
 @-webkit-keyframes fade {
@@ -39,7 +57,6 @@ html {
 body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  color: #333;
 }
 
 @media only screen and (max-width: 75em) {
@@ -60,6 +77,12 @@ body video {
 
 body .bg-white {
   background: white;
+  color: #333;
+}
+
+body .bg-black {
+  background: rgba(6, 9, 10, 0.7);
+  color: white;
 }
 
 /*
@@ -82,22 +105,29 @@ body .bg-white {
 */
 .headline--s, .headline--m, .headline--l, .headline--xl {
   text-align: center;
-  text-transform: uppercase;
-  font-family: "Oswald", sans-serif;
+  font-family: 'Oswald', sans-serif;
   line-height: 125%;
 }
 
-.headline--m {
+.headline--s {
   font-size: 5rem;
 }
 
-.headline--xl {
+.headline--m {
+  font-size: 7rem;
+}
+
+.headline--l {
   font-size: 10rem;
+}
+
+.headline--xl {
+  font-size: 14rem;
   color: white;
 }
 
 .text--s, .text--m {
-  text-align: justify;
+  font-family: 'Open Sans';
 }
 
 .text--s {
@@ -107,6 +137,14 @@ body .bg-white {
 
 .text--m {
   font-size: 2.5rem;
+}
+
+.text--l {
+  font-size: 3rem;
+}
+
+.text--xl {
+  font-size: 5rem;
 }
 
 .quote--m {
@@ -119,6 +157,17 @@ body .bg-white {
   text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.5);
 }
 
+/*
+TODO--
+responsiv
+chart
+map
+
+hidden class
+parallax
+animasjon
+
+responsive bilder med picture tag*/
 /*
 .header_landing {
 
@@ -153,7 +202,7 @@ body .bg-white {
       left: 0;
       width: 100%;
       height: 100%;
-      background: no-repeat center url(/img/placeholder/us-flag.svg);
+      background: no-repeat center url(../img/placeholder/us-flag.svg);
       background-size: cover;
       grid-area: 1 / 1 / -1 / -1;
       z-index: -1;
@@ -167,8 +216,6 @@ body .bg-white {
 }*/
 .header_landing {
   background: black;
-  position: -webkit-sticky;
-  position: sticky;
   top: 0;
   height: 200vh;
   display: -ms-grid;
@@ -196,9 +243,8 @@ body .bg-white {
   left: 0;
   width: 100%;
   height: 100vh;
-  background: no-repeat center url(/img/placeholder/nor-flagg-lines.svg);
+  background: no-repeat center url(../img/placeholder/nor-flagg-lines.svg);
   background-size: cover;
-  opacity: 9;
 }
 
 .header_landing_video {
@@ -253,7 +299,7 @@ body .bg-white {
       align-content: center;
   text-align: center;
   z-index: -3;
-  text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.5);
+  text-shadow: 0 5px 20px rgba(30, 40, 45, 0.6);
 }
 
 .header_landing_text::before {
@@ -263,14 +309,57 @@ body .bg-white {
   left: 0;
   width: 100%;
   height: 100vh;
-  background: no-repeat center url(/img/placeholder/am-flag.jpg);
+  background: no-repeat center url(../img/placeholder/am-flag.jpg);
   background-size: cover;
   grid-area: 1 / 1 / -1 / -1;
   z-index: -1;
-  opacity: 0.7;
+  opacity: 0.6;
 }
 
 .header_landing_text_subtitle {
+  color: white;
+  margin: 0 auto;
+  width: 80%;
+  font-weight: 400;
+}
+
+.img-b {
+  top: 0;
+  height: 200vh;
+  display: -ms-grid;
+  display: grid;
+  overflow: hidden;
+  height: 150vh;
+  width: 100%;
+}
+
+.img-b::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: no-repeat center url(../img/foto-vinner-closeup_8452.jpg);
+  background-size: cover;
+  grid-area: 1 / 1 / -1 / -1;
+  z-index: -20;
+}
+
+.img-b_headline {
+  height: 100vh;
+  grid-area: 1 / 1 / -1 / -1;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  text-align: center;
+}
+
+.img-b_subtitle {
   color: white;
   margin: 0 auto;
   width: 80%;
@@ -299,6 +388,7 @@ body .bg-white {
   display: grid;
   -ms-grid-columns: (minmax(30rem, 50rem))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(30rem, 50rem));
+  grid-gap: 5rem;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -307,10 +397,11 @@ body .bg-white {
 .multimedia-a_media {
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: (minmax(10rem, 10rem))[6];
-      grid-template-rows: repeat(6, minmax(10rem, 10rem));
+  -ms-grid-rows: (minmax(10rem, 10rem))[10];
+      grid-template-rows: repeat(10, minmax(10rem, 10rem));
   -ms-grid-columns: (1fr)[6];
       grid-template-columns: repeat(6, 1fr);
+  grid-auto-rows: auto;
 }
 
 .multimedia-a_media_img--1 {
@@ -343,15 +434,9 @@ body .bg-white {
   grid-row-gap: 2rem;
 }
 
-.multimedia-a_text_headline {
-  margin-bottom: 2rem;
-  line-height: 120%;
-}
-
 .multimedia-b {
   width: 100%;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(100%, rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), no-repeat center url(/img/bil-svart_8440.jpg);
-  background: linear-gradient(rgba(0, 0, 0, 0.7) 100%, rgba(0, 0, 0, 0.7) 100%), no-repeat center url(/img/bil-svart_8440.jpg);
+  background: linear-gradient(55deg, #1c586e79 0%, #80464667 85%), no-repeat center url(../img/bil-svart_8440.jpg);
   background-size: cover;
   display: -ms-grid;
   display: grid;
@@ -384,10 +469,11 @@ body .bg-white {
   display: grid;
   -ms-grid-columns: (minmax(50rem, 1fr))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(50rem, 1fr));
+  grid-gap: 3rem;
 }
 
 .multimedia-c_media {
-  border: 2rem solid white;
+  padding: 5rem;
 }
 
 .multimedia-c_media_image img {
@@ -397,7 +483,8 @@ body .bg-white {
 }
 
 .multimedia-c_text {
-  width: 60%;
+  padding: 15rem 0rem;
+  max-width: 40rem;
   display: -ms-grid;
   display: grid;
   -ms-grid-row-align: center;
@@ -412,44 +499,45 @@ body .bg-white {
   display: grid;
   -ms-grid-columns: (minmax(50rem, 70rem))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(50rem, 70rem));
+  grid-gap: 10rem;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  min-height: 100vh;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(100%, rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), no-repeat center url(/img/felger-vegg_8384.jpg);
-  background: linear-gradient(rgba(0, 0, 0, 0.7) 100%, rgba(0, 0, 0, 0.7) 100%), no-repeat center url(/img/felger-vegg_8384.jpg);
-  background-size: cover;
-  position: relative;
-  /* &_excerpt {
-    width: 20%;
-    position: absolute;
-    top: 20rem;
-    right: 80rem;
-  }*/
+  background: linear-gradient(55deg, #58191942 0%, #010c1d9f 85%), no-repeat center url(../img/felger-vegg_8384.jpg);
 }
 
 .multimedia-d_media {
-  position: relative;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (minmax(10rem, 10rem))[6];
+      grid-template-rows: repeat(6, minmax(10rem, 10rem));
+  -ms-grid-columns: (1fr)[6];
+      grid-template-columns: repeat(6, 1fr);
 }
 
 .multimedia-d_media_img--1 {
-  width: 80rem;
-  height: 100%;
-  position: absolute;
-  top: 30rem;
-  right: 20rem;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 3;
+  grid-row: 2 / 5;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 3;
+  grid-column: 2 / 5;
+  width: 150%;
 }
 
 .multimedia-d_media_img--2 {
-  width: 50rem;
-  height: 100%;
-  position: absolute;
-  top: 80rem;
-  right: 60rem;
+  -ms-grid-row: 5;
+  grid-row: 5;
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 3;
+  grid-column: 4 / 7;
+  z-index: 20;
 }
 
 .multimedia-d_text {
-  padding: 5rem 10rem;
+  max-width: 60rem;
+  margin: 15rem 0rem;
+  padding: 5rem;
   display: -ms-grid;
   display: grid;
   -ms-grid-row-align: center;
@@ -459,19 +547,26 @@ body .bg-white {
   grid-row-gap: 2rem;
 }
 
+.multimedia-d_excerpt {
+  -ms-grid-row: 1;
+  grid-row: 1;
+  grid-column: 4 / -1;
+}
+
 .multimedia-e {
+  padding: 5rem;
   display: -ms-grid;
   display: grid;
-  min-height: 70vh;
   -ms-grid-columns: (minmax(50rem, 70rem))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(50rem, 70rem));
+  grid-gap: 5rem;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
 }
 
 .multimedia-e_text {
-  width: 60%;
+  max-width: 50rem;
   display: -ms-grid;
   display: grid;
   -ms-grid-row-align: center;
@@ -482,11 +577,10 @@ body .bg-white {
 }
 
 .multimedia-e_media {
-  padding: 10rem;
+  position: relative;
 }
 
 .multimedia-e_media_image img {
-  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -495,9 +589,23 @@ body .bg-white {
   display: none;
 }
 
+.multimedia-e .next {
+  font-size: 15rem;
+  position: absolute;
+  top: 25rem;
+  left: 0;
+}
+
+.multimedia-e .number {
+  position: absolute;
+  top: 25rem;
+  right: -15rem;
+  font-size: 15rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .multimedia-f {
-  min-height: 100vh;
-  background: no-repeat center url(/img/kart-closeup_8416.jpg);
+  background: linear-gradient(55deg, #1c586e42 0%, #80464633 85%), no-repeat center url(../img/kart-closeup_8416.jpg);
   background-size: cover;
   display: -ms-grid;
   display: grid;
@@ -695,27 +803,20 @@ body .bg-white {
 }
 
 .text-a {
-  padding: 20rem 0rem;
+  padding: 10rem;
 }
 
 .text-a_text {
+  max-width: 50rem;
   display: -ms-grid;
   display: grid;
   grid-row-gap: 2rem;
   margin: 0 auto;
-  width: 40%;
-}
-
-.img-b {
-  height: 150vh;
-  width: 100%;
-  background: none;
 }
 
 .dv-small-a {
   padding: 10rem 0rem;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(100%, rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), no-repeat center url(/img/magasiner_8395.jpg);
-  background: linear-gradient(rgba(0, 0, 0, 0.7) 100%, rgba(0, 0, 0, 0.7) 100%), no-repeat center url(/img/magasiner_8395.jpg);
+  background: linear-gradient(55deg, #2c0303a2 0%, #3a3a3aa8 85%), no-repeat center url(../img/bilder-bak_8443.jpg);
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (minmax(50rem, 70rem))[auto-fit];
@@ -748,6 +849,15 @@ body .bg-white {
   -ms-grid-column-align: center;
       justify-self: center;
   background: greenyellow;
+  position: relative;
+}
+
+.dv-small-a_data_number {
+  font-size: 15rem;
+  color: white;
+  position: absolute;
+  top: -12rem;
+  right: 0;
 }
 
 .dv-small-b {
@@ -787,7 +897,7 @@ body .bg-white {
 .dv-big-a {
   width: 100%;
   min-height: 100vh;
-  background: no-repeat center url(/img/kart-closeup_8416.jpg);
+  background: no-repeat center url(../img/kart-closeup_8416.jpg);
   background-size: cover;
 }
 /*# sourceMappingURL=main.css.map */
