--- a/sass/helpers.css
+++ b/sass/helpers.css
@@ -1,43 +1,1 @@
-.visible {
-  display: block;
-}
-
-.not-visible {
-  display: none;
-  visibility: hidden;
-}
-
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: .1s;
-  animation-name: fade;
-  animation-duration: .1s;
-}
-
-.stick {
-  position: -webkit-sticky;
-  position: sticky;
-}
-
-.zindex {
-  z-index: -200;
-}
-
-@-webkit-keyframes fade {
-  from {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes fade {
-  from {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1;
-  }
-}
-/*# sourceMappingURL=helpers.css.map */
+/* No CSS *//*# sourceMappingURL=helpers.css.map */
