--- a/sass/main.css
+++ b/sass/main.css
@@ -1,46 +1,3 @@
-.visible {
-  display: block;
-}
-
-.not-visible {
-  display: none;
-  visibility: hidden;
-}
-
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: .1s;
-  animation-name: fade;
-  animation-duration: .1s;
-}
-
-.stick {
-  position: -webkit-sticky;
-  position: sticky;
-}
-
-.zindex {
-  z-index: -200;
-}
-
-@-webkit-keyframes fade {
-  from {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes fade {
-  from {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
 *,
 *::after,
 *::before {
@@ -80,9 +37,30 @@ body .bg-white {
   color: #333;
 }
 
+body .fade-in {
+  opacity: 0;
+}
+
+body .sticky {
+  position: fixed;
+}
+
 body .bg-black {
   background: rgba(6, 9, 10, 0.7);
+  padding: 5rem;
+  max-width: 60rem;
   color: white;
+}
+
+body .zindex {
+  position: relative;
+  z-index: 100;
+}
+
+body .ease {
+  --ease: all .2s ease;
+  -webkit-transition: var(--ease);
+  transition: var(--ease);
 }
 
 /*
@@ -215,16 +193,22 @@ responsive bilder med picture tag*/
   }
 }*/
 .header_landing {
+  --ease: all 1s ease;
   background: black;
   top: 0;
   height: 200vh;
   display: -ms-grid;
   display: grid;
   overflow: hidden;
+  position: -webkit-sticky;
+  position: sticky;
   z-index: -10;
+  -webkit-transition: var(--ease);
+  transition: var(--ease);
 }
 
 .header_landing .header_landing_grid {
+  --ease: all 1s ease;
   grid-area: 1 / 1 / -1 / -1;
   z-index: -5;
   height: 100vh;
@@ -234,6 +218,8 @@ responsive bilder med picture tag*/
   -ms-grid-columns: 32.5% 1fr;
       grid-template: 43% 50% / 32.5% 1fr;
   grid-gap: 20rem;
+  -webkit-transition: var(--ease);
+  transition: var(--ease);
 }
 
 .header_landing .header_landing_grid::before {
@@ -248,6 +234,7 @@ responsive bilder med picture tag*/
 }
 
 .header_landing_video {
+  z-index: -1;
   -ms-grid-row: 1;
   grid-row: 1;
   -ms-grid-column: 1;
@@ -323,47 +310,55 @@ responsive bilder med picture tag*/
   font-weight: 400;
 }
 
-.img-b {
-  top: 0;
-  height: 200vh;
+.multimedia-scroll {
+  background: #f8f9fa;
+  height: 100%;
   display: -ms-grid;
   display: grid;
-  overflow: hidden;
-  height: 150vh;
-  width: 100%;
-}
-
-.img-b::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background: no-repeat center url(../img/foto-vinner-closeup_8452.jpg);
-  background-size: cover;
-  grid-area: 1 / 1 / -1 / -1;
-  z-index: -20;
-}
-
-.img-b_headline {
-  height: 100vh;
-  grid-area: 1 / 1 / -1 / -1;
-  display: -ms-grid;
-  display: grid;
+  -ms-grid-columns: (minmax(30rem, 50rem))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(30rem, 50rem));
+  grid-gap: 15rem;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  text-align: center;
+  position: relative;
 }
 
-.img-b_subtitle {
-  color: white;
-  margin: 0 auto;
-  width: 80%;
-  font-weight: 400;
+.multimedia-scroll_media {
+  -ms-grid-column: 2;
+  grid-column: 2;
+}
+
+.multimedia-scroll_media_test {
+  background: no-repeat url(../img/bil-svart_8440.jpg);
+  background-size: contain;
+  background-position: center center;
+  position: absolute;
+  height: 100vh;
+  width: 50%;
+  max-width: 80rem;
+  left: 50%;
+  top: 0;
+}
+
+.multimedia-scroll_text {
+  -ms-grid-column: 1;
+  grid-column: 1;
+  min-height: 50vh;
+  z-index: 9999;
+}
+
+.multimedia-scroll_text_quoteblock {
+  position: relative;
+}
+
+.multimedia-scroll_text_quoteblock p {
+  position: relative;
+  min-height: 100vh;
+}
+
+.multimedia-scroll_text_quoteblock--1 {
+  min-height: 50vh;
 }
 
 .introduction {
@@ -436,7 +431,7 @@ responsive bilder med picture tag*/
 
 .multimedia-b {
   width: 100%;
-  background: linear-gradient(55deg, #1c586e79 0%, #80464667 85%), no-repeat center url(../img/bil-svart_8440.jpg);
+  background: linear-gradient(55deg, #1c3d6e79 0%, #80464667 85%), no-repeat center url(../img/familien_8429.jpg);
   background-size: cover;
   display: -ms-grid;
   display: grid;
@@ -445,9 +440,7 @@ responsive bilder med picture tag*/
 }
 
 .multimedia-b_text {
-  padding: 7rem 10rem;
   margin: 25rem 10rem;
-  max-width: 70rem;
   -ms-grid-row-align: center;
       align-self: center;
   -ms-grid-column-align: center;
@@ -535,9 +528,7 @@ responsive bilder med picture tag*/
 }
 
 .multimedia-d_text {
-  max-width: 60rem;
   margin: 15rem 0rem;
-  padding: 5rem;
   display: -ms-grid;
   display: grid;
   -ms-grid-row-align: center;
@@ -619,8 +610,6 @@ responsive bilder med picture tag*/
   display: -ms-grid;
   display: grid;
   grid-row-gap: 3rem;
-  max-width: 60rem;
-  padding: 7rem;
   margin: 10rem;
   background: whitesmoke;
 }
@@ -827,7 +816,6 @@ responsive bilder med picture tag*/
 }
 
 .dv-small-a_text {
-  background: white;
   width: 80%;
   padding: 5rem;
   display: -ms-grid;
