--- a/sass/_module.scss
+++ b/sass/_module.scss
@@ -65,7 +65,6 @@ responsive bilder med picture tag*/
 
 //test
 .header_landing {
-  --ease: all 1s ease;
   background: black;
   top: 0;
   height: 200vh;
@@ -73,11 +72,8 @@ responsive bilder med picture tag*/
   overflow: hidden;
   position: sticky;
   z-index: -10;
-  transition: var(--ease);
 
-  .header_landing_grid {
-    --ease: all 1s ease;
-
+  &_grid {
     grid-area: 1 / 1 / -1 / -1;
     z-index: -5;
     height: 100vh;
@@ -85,7 +81,7 @@ responsive bilder med picture tag*/
     grid-template: 43% 50% / 32.5% 1fr;
     grid-gap: 20rem;
 
-    transition: var(--ease);
+    transition: all 1s ease;
 
     &::before {
       content: "";
@@ -151,7 +147,7 @@ responsive bilder med picture tag*/
       background: no-repeat center url(../img/placeholder/am-flag.jpg);
       background-size: cover;
       grid-area: 1 / 1 / -1 / -1;
-      z-index: -1;
+      z-index: -10;
       opacity: 0.6;
     }
 
@@ -182,17 +178,17 @@ responsive bilder med picture tag*/
   &_media {
     grid-column: 2;
 
-    &_test {
-      background: no-repeat url(../img/bil-svart_8440.jpg);
-      background-size: contain;
-      background-position: center center;
-
+    &_img--1, &_img--2, &_img--3  {
       position: absolute;
       height: 100vh;
       width: 50%;
       max-width: 80rem;
       left: 50%;
       top: 0;
+
+      img {
+        
+      }
     }
   }
 
@@ -273,7 +269,7 @@ responsive bilder med picture tag*/
 .multimedia-b {
   width: 100%;
 
-  background: linear-gradient(55deg, #1c3d6e79 0%, #80464667 85%),
+  background: linear-gradient(55deg, #182949de 0%, #804646a4 85%),
     //no-repeat center url(../img/bil-svart_8440.jpg);
       no-repeat center url(../img/familien_8429.jpg);
   background-size: cover;
@@ -290,8 +286,6 @@ responsive bilder med picture tag*/
 
     display: grid;
     grid-row-gap: 3rem;
-
-    background: $color-white-bg;
   }
 
   &_excerpt {
@@ -309,7 +303,7 @@ responsive bilder med picture tag*/
   grid-gap: 3rem;
 
   &_media {
-    padding: 5rem;
+    padding: 2rem;
 
     &_image img {
       height: 100%;
@@ -335,7 +329,7 @@ responsive bilder med picture tag*/
   grid-gap: 10rem;
   justify-content: center;
 
-  background: linear-gradient(55deg, #58191942 0%, #010c1d9f 85%),
+  background: linear-gradient(55deg, #804646a4 0%,  #182949de 85%),
     no-repeat center url(../img/felger-vegg_8384.jpg);
 
   &_media {
@@ -428,18 +422,19 @@ responsive bilder med picture tag*/
     display: grid;
     grid-row-gap: 3rem;
     margin: 10rem;
-
-    background: $color-white-bg;
   }
 }
 
 .image-grid-a {
   &_media {
-    background: black;
     display: grid;
     grid-template: repeat(3, 15vw) / repeat(6, 1fr);
     grid-gap: 1.5rem;
     padding: 1.5rem;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-gap: .3rem;
+    }
 
     &_img {
       &--1 {
