--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,12 @@
 @import "mixins";
 @import "variables";
+@import "helpers";
 
 @import "animations";
 @import "base";
 @import "typography";
 
-@import "module";
+@import "header";
+@import "multimedia-modules";
+@import "multimedia-grid-modules";
+@import "data-vis-modules";
