--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -22,6 +22,7 @@
 %headline {
   text-align: center;
   font-family: 'Oswald', sans-serif;
+  font-family: 'Anton', sans-serif;
   line-height: 125%;
 }
 
