--- a/sass/main.css
+++ b/sass/main.css
@@ -1,27 +1,3 @@
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: inherit;
-          box-sizing: inherit;
-}
-
-html {
-  font-size: 62.5%;
-}
-
-body {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-@media only screen and (max-width: 75em) {
-  body {
-    font-size: 50%;
-  }
-}
-
 img {
   width: 100%;
   height: auto;
@@ -30,6 +6,16 @@ img {
 video {
   width: 100%;
   height: auto;
+}
+
+.fill-page {
+  min-height: 100vh;
+}
+
+@media only screen and (max-width: 1000px) {
+  .fill-page {
+    min-height: initial;
+  }
 }
 
 .bg-white {
@@ -58,9 +44,88 @@ video {
 }
 
 .ease {
-  --ease: all .5s ease;
+  --ease: all 0.5s ease;
   -webkit-transition: var(--ease);
   transition: var(--ease);
+}
+
+/*
+TODO--
+responsiv
+chart
+map
+
+hidden class
+parallax
+animasjon
+
+responsive bilder med picture tag*/
+:root {
+  --blue: #007bff;
+  --indigo: #6610f2;
+  --purple: #6f42c1;
+  --pink: #e83e8c;
+  --red: #dc3545;
+  --orange: #fd7e14;
+  --yellow: #ffc107;
+  --green: #28a745;
+  --teal: #20c997;
+  --cyan: #17a2b8;
+  --white: #fff;
+  --gray: #868e96;
+  --gray-dark: #343a40;
+  --primary: #007bff;
+  --secondary: #868e96;
+  --success: #28a745;
+  --info: #17a2b8;
+  --warning: #ffc107;
+  --danger: #dc3545;
+  --light: #f8f9fa;
+  --dark: #343a40;
+  --breakpoint-xs: 0;
+  --breakpoint-sm: 576px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 992px;
+  --breakpoint-xl: 1200px;
+  --font-family-sans-serif: Arial,sans-serif;
+  --font-family-monospace: monospace;
+}
+
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+@media only screen and (max-width: 75em) {
+  body {
+    font-size: 50%;
+  }
+}
+
+.page-loader {
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0%;
+  left: 0;
+  right: 0%;
+  background: black;
+  z-index: 99;
+  overflow: hidden;
+  position: fixed;
 }
 
 /*
@@ -84,6 +149,7 @@ video {
 .headline--s, .headline--m, .headline--l, .headline--xl {
   text-align: center;
   font-family: 'Oswald', sans-serif;
+  font-family: 'Anton', sans-serif;
   line-height: 125%;
 }
 
@@ -135,17 +201,6 @@ video {
   text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.5);
 }
 
-/*
-TODO--
-responsiv
-chart
-map
-
-hidden class
-parallax
-animasjon
-
-responsive bilder med picture tag*/
 /*
 .header_landing {
 
@@ -306,54 +361,6 @@ responsive bilder med picture tag*/
   font-weight: 400;
 }
 
-.multimedia-scroll {
-  background: #f8f9fa;
-  height: 100%;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (minmax(30rem, 50rem))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(30rem, 50rem));
-  grid-gap: 15rem;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  position: relative;
-}
-
-.multimedia-scroll_media {
-  -ms-grid-column: 2;
-  grid-column: 2;
-}
-
-.multimedia-scroll_media_img--1, .multimedia-scroll_media_img--2, .multimedia-scroll_media_img--3 {
-  position: absolute;
-  height: 100vh;
-  width: 50%;
-  max-width: 80rem;
-  left: 50%;
-  top: 0;
-}
-
-.multimedia-scroll_text {
-  -ms-grid-column: 1;
-  grid-column: 1;
-  min-height: 50vh;
-  z-index: 9999;
-}
-
-.multimedia-scroll_text_quoteblock {
-  position: relative;
-}
-
-.multimedia-scroll_text_quoteblock p {
-  position: relative;
-  min-height: 100vh;
-}
-
-.multimedia-scroll_text_quoteblock--1 {
-  min-height: 50vh;
-}
-
 .introduction {
   padding: 20rem 0rem;
   display: -ms-grid;
@@ -399,7 +406,7 @@ responsive bilder med picture tag*/
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-column: 1 / 4;
-  width: 150%;
+  width: 160%;
 }
 
 .multimedia-a_media_img--2 {
@@ -447,6 +454,8 @@ responsive bilder med picture tag*/
   margin: 10rem 0rem;
   max-width: 45rem;
   padding: 1.5rem;
+  -ms-grid-column-align: right;
+      justify-self: right;
 }
 
 .multimedia-c {
@@ -501,9 +510,8 @@ responsive bilder med picture tag*/
 }
 
 .multimedia-d_media_img--1 {
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 3;
-  grid-row: 2 / 5;
+  -ms-grid-row: 4;
+  grid-row: 4;
   -ms-grid-column: 2;
   -ms-grid-column-span: 3;
   grid-column: 2 / 5;
@@ -511,8 +519,8 @@ responsive bilder med picture tag*/
 }
 
 .multimedia-d_media_img--2 {
-  -ms-grid-row: 5;
-  grid-row: 5;
+  -ms-grid-row: 7;
+  grid-row: 7;
   -ms-grid-column: 4;
   -ms-grid-column-span: 3;
   grid-column: 4 / 7;
@@ -531,18 +539,17 @@ responsive bilder med picture tag*/
 }
 
 .multimedia-d_excerpt {
-  -ms-grid-row: 1;
-  grid-row: 1;
+  -ms-grid-row: 2;
+  grid-row: 2;
   grid-column: 4 / -1;
 }
 
 .multimedia-e {
-  padding: 5rem;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(50rem, 70rem))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(50rem, 70rem));
-  grid-gap: 5rem;
+  -ms-grid-columns: (minmax(50rem, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(50rem, 1fr));
+  grid-gap: 3rem;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -561,11 +568,13 @@ responsive bilder med picture tag*/
 
 .multimedia-e_media {
   position: relative;
+  padding: 2rem;
 }
 
 .multimedia-e_media_image img {
   -o-object-fit: cover;
      object-fit: cover;
+  height: 100%;
 }
 
 .multimedia-e .slides {
@@ -573,18 +582,44 @@ responsive bilder med picture tag*/
 }
 
 .multimedia-e .next {
+  height: 15rem;
+  width: 15rem;
   font-size: 15rem;
   position: absolute;
-  top: 25rem;
-  left: 0;
+  top: 50%;
+  left: 0%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  color: var(--light);
+  background: var(--gray-dark);
+  cursor: pointer;
+  line-height: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.multimedia-e .next::-moz-selection {
+  background: none;
+}
+
+.multimedia-e .next::selection {
+  background: none;
 }
 
 .multimedia-e .number {
   position: absolute;
-  top: 25rem;
-  right: -15rem;
+  top: 0;
+  right: 0;
   font-size: 15rem;
   font-family: Arial, Helvetica, sans-serif;
+  color: orangered;
 }
 
 .multimedia-f {
@@ -605,6 +640,76 @@ responsive bilder med picture tag*/
   margin: 10rem;
 }
 
+.text-a {
+  padding: 10rem;
+}
+
+.text-a_text {
+  max-width: 50rem;
+  display: -ms-grid;
+  display: grid;
+  grid-row-gap: 2rem;
+  margin: 0 auto;
+}
+
+.multimedia-scroll {
+  background: var(--light);
+  height: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(30rem, 50rem))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(30rem, 50rem));
+  grid-gap: 15rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+}
+
+.multimedia-scroll_media {
+  -ms-grid-column: 2;
+  grid-column: 2;
+}
+
+.multimedia-scroll_media_img--1, .multimedia-scroll_media_img--2, .multimedia-scroll_media_img--3 {
+  position: absolute;
+  height: 100vh;
+  width: 50%;
+  max-width: 80rem;
+  left: 50%;
+  top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.multimedia-scroll_media_img--1 img, .multimedia-scroll_media_img--2 img, .multimedia-scroll_media_img--3 img {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  width: 80%;
+}
+
+.multimedia-scroll_text {
+  -ms-grid-column: 1;
+  grid-column: 1;
+  min-height: 50vh;
+  z-index: 9999;
+}
+
+.multimedia-scroll_text_quoteblock {
+  position: relative;
+}
+
+.multimedia-scroll_text_quoteblock p {
+  position: relative;
+  min-height: 100vh;
+}
+
+.multimedia-scroll_text_quoteblock--1 {
+  min-height: 50vh;
+}
+
 .image-grid-a_media {
   display: -ms-grid;
   display: grid;
@@ -617,7 +722,7 @@ responsive bilder med picture tag*/
 
 @media only screen and (max-width: 50em) {
   .image-grid-a_media {
-    grid-gap: .3rem;
+    grid-gap: 0.3rem;
   }
 }
 
@@ -787,18 +892,6 @@ responsive bilder med picture tag*/
   display: block;
 }
 
-.text-a {
-  padding: 10rem;
-}
-
-.text-a_text {
-  max-width: 50rem;
-  display: -ms-grid;
-  display: grid;
-  grid-row-gap: 2rem;
-  margin: 0 auto;
-}
-
 .dv-small-a {
   padding: 10rem 0rem;
   background: linear-gradient(55deg, #2c0303a2 0%, #3a3a3aa8 85%), no-repeat center url(../img/bilder-bak_8443.jpg);
@@ -880,8 +973,7 @@ responsive bilder med picture tag*/
 
 .dv-big-a {
   width: 100%;
-  min-height: 100vh;
-  background: no-repeat center url(../img/kart-closeup_8416.jpg);
-  background-size: cover;
+  min-height: 100%;
+  background: var(--light);
 }
 /*# sourceMappingURL=main.css.map */
