--- a/sass/_multimedia-modules.scss
+++ b/sass/_multimedia-modules.scss
@@ -61,7 +61,7 @@
   width: 100%;
 
   background: linear-gradient(55deg, #182949de 0%, #804646a4 85%),
-      no-repeat center url(../img/familien_8429.jpg);
+    no-repeat center url(../img/familien_8429.jpg);
   background-size: cover;
 
   display: grid;
@@ -165,6 +165,7 @@
   &_text {
     max-width: 50rem;
     display: grid;
+  
     align-self: center;
     justify-self: center;
     grid-row-gap: 2rem;
@@ -174,45 +175,52 @@
     position: relative;
     padding: 2rem;
 
+    display: grid;
+    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: repeat(5, 1fr);
+    grid-auto-rows: auto;
+
+    &_image { 
+      grid-area: 1 / 1 / -1 / -1;
+    }
+
     &_image img {
+
+
       object-fit: cover;
       height: 100%;
+
     }
-  }
 
-  .slides {
-    display: none;
-  }
-
-  .next {
-    height: 15rem;
-    width: 15rem;
-    font-size: 15rem;
-    position: absolute;
-    top: 50%;
-    left: 0%;
-    transform: translate(-50%, -50%);
-    color: var(--light);
-    background: var(--gray-dark);
-    cursor: pointer;
-    line-height: 0;
-    
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    &::selection {
-      background: none;
+    .slides {
+      display: none;
     }
-  }
 
-  .number {
-    position: absolute;
-    top: 0;
-    right: 0;
-    font-size: 15rem;
-    font-family: Arial, Helvetica, sans-serif;
-    color: orangered;
+    .next {
+      grid-row: 3;
+      grid-column: 1;
+      font-size: 10rem;
+      color: var(--light);
+      background: var(--gray-dark);
+      cursor: pointer;
+      line-height: 0;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      &::selection {
+        background: none;
+      }
+    }
+
+    .number {
+      grid-row: 5;
+      grid-column: 5;
+      font-size: 15rem;
+      font-family: Arial, Helvetica, sans-serif;
+      color: orangered;
+    }
   }
 }
 
@@ -233,8 +241,6 @@
   }
 }
 
-
-
 // TEXT A
 .text-a {
   padding: 10rem;
@@ -248,8 +254,6 @@
 }
 
 // VIDEO A
-
-
 
 // MULTIMEDIA SCROLL, sticky images with scrolling text
 .multimedia-scroll {
@@ -304,5 +308,3 @@
     }
   }
 }
-
-
