--- a/sass/_multimedia-modules.scss
+++ b/sass/_multimedia-modules.scss
@@ -61,7 +61,7 @@
   width: 100%;
 
   background: linear-gradient(55deg, #182949de 0%, #804646a4 85%),
-    no-repeat center url(../img/familien_8429.jpg);
+    no-repeat center url(../img/mod/familien.jpg);
   background-size: cover;
 
   display: grid;
@@ -70,7 +70,7 @@
   grid-template-columns: repeat(auto-fit, minmax(70rem, 1fr));
 
   &_text {
-    margin: 25rem 10rem;
+    margin: 10rem 10rem;
     align-self: center;
     justify-self: center;
 
@@ -121,22 +121,24 @@
   justify-content: center;
 
   background: linear-gradient(55deg, #804646a4 0%, #182949de 85%),
-    no-repeat center url(../img/felger-vegg_8384.jpg);
+    no-repeat center url(../img/mod/juke-vid.jpg);
+    background-size: cover;
 
   &_media {
     display: grid;
-    grid-template-rows: repeat(6, minmax(10rem, 10rem));
+    grid-template-rows: repeat(8, 10rem);
     grid-template-columns: repeat(6, 1fr);
+    grid-auto-rows: auto;
 
     &_img--1 {
-      grid-row: 4;
-      grid-column: 2 / 5;
-      width: 150%;
+      grid-row: 5;
+      grid-column: 3 / 5;
+      width: 120%;
     }
 
     &_img--2 {
-      grid-row: 7;
-      grid-column: 4 / 7;
+      grid-row: 6;
+      grid-column: 5 / 7;
       z-index: 20;
     }
   }
