--- a/sass/main.css
+++ b/sass/main.css
@@ -435,7 +435,7 @@ body {
 
 .multimedia-b {
   width: 100%;
-  background: linear-gradient(55deg, #182949de 0%, #804646a4 85%), no-repeat center url(../img/familien_8429.jpg);
+  background: linear-gradient(55deg, #182949de 0%, #804646a4 85%), no-repeat center url(../img/mod/familien.jpg);
   background-size: cover;
   display: -ms-grid;
   display: grid;
@@ -444,7 +444,7 @@ body {
 }
 
 .multimedia-b_text {
-  margin: 25rem 10rem;
+  margin: 10rem 10rem;
   -ms-grid-row-align: center;
       align-self: center;
   -ms-grid-column-align: center;
@@ -501,33 +501,35 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background: linear-gradient(55deg, #804646a4 0%, #182949de 85%), no-repeat center url(../img/felger-vegg_8384.jpg);
+  background: linear-gradient(55deg, #804646a4 0%, #182949de 85%), no-repeat center url(../img/mod/juke-vid.jpg);
+  background-size: cover;
 }
 
 .multimedia-d_media {
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: (minmax(10rem, 10rem))[6];
-      grid-template-rows: repeat(6, minmax(10rem, 10rem));
+  -ms-grid-rows: (10rem)[8];
+      grid-template-rows: repeat(8, 10rem);
   -ms-grid-columns: (1fr)[6];
       grid-template-columns: repeat(6, 1fr);
+  grid-auto-rows: auto;
 }
 
 .multimedia-d_media_img--1 {
-  -ms-grid-row: 4;
-  grid-row: 4;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 3;
-  grid-column: 2 / 5;
-  width: 150%;
+  -ms-grid-row: 5;
+  grid-row: 5;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 2;
+  grid-column: 3 / 5;
+  width: 120%;
 }
 
 .multimedia-d_media_img--2 {
-  -ms-grid-row: 7;
-  grid-row: 7;
-  -ms-grid-column: 4;
-  -ms-grid-column-span: 3;
-  grid-column: 4 / 7;
+  -ms-grid-row: 6;
+  grid-row: 6;
+  -ms-grid-column: 5;
+  -ms-grid-column-span: 2;
+  grid-column: 5 / 7;
   z-index: 20;
 }
 
