fjerna bilder + scroll indicator + mediaquery + rydda js

--- a/sass/_helpers.scss
+++ b/sass/_helpers.scss
@@ -30,6 +30,14 @@ video {
   opacity: 0 !important;
 }
 
+.visible {
+  display: initial !important;
+}
+
+.not-visible {
+  display: none !important;
+}
+
 .sticky {
   position: fixed !important;
 }
