--- a/sass/_multimedia-modules.scss
+++ b/sass/_multimedia-modules.scss
@@ -11,7 +11,10 @@
   grid-gap: 4rem;
 
   &_text {
-    max-width: 50rem;
+    max-width: 80rem;
+    text-align: center;
+    line-height: 150%;
+    font-weight: 600;
   }
 }
 
@@ -35,12 +38,18 @@
       grid-row: 2 / 5;
       grid-column: 1 / 4;
       width: 160%;
+      //box-shadow: 0 5px 20px rgba(30, 40, 45, 0.6);
     }
 
     &_img--2 {
       grid-row: 6 / 6;
       grid-column: 3 / 6;
       z-index: 20;
+      //box-shadow: 0 5px 20px rgba(30, 40, 45, 0.6);
+    }
+
+    @media only screen and (max-width: $bp-largest) {
+      grid-template-rows: repeat(5, minmax(10rem, 10rem));
     }
   }
 
@@ -52,6 +61,10 @@
     grid-row-gap: 2rem;
 
     &_headline {
+    }
+
+    @media only screen and (max-width: $bp-largest) {
+      padding: 1rem 0rem;
     }
   }
 }
@@ -79,10 +92,18 @@
   }
 
   &_excerpt {
-    margin: 10rem 0rem;
+    margin: 50% 0rem;
     max-width: 45rem;
     padding: 1.5rem;
     justify-self: right;
+
+    @media only screen and (max-width: $bp-largest) {
+      margin: 2rem 0rem;
+    }
+  }
+
+  @media only screen and (max-width: $bp-largest) {
+
   }
 }
 
@@ -104,7 +125,7 @@
 
   &_text {
     padding: 15rem 0rem;
-    max-width: 40rem;
+    max-width: 50rem;
 
     display: grid;
     align-self: center;
@@ -122,7 +143,7 @@
 
   background: linear-gradient(55deg, #804646a4 0%, #182949de 85%),
     no-repeat center url(../img/mod/juke-vid.jpg);
-    background-size: cover;
+  background-size: cover;
 
   &_media {
     display: grid;
@@ -134,12 +155,14 @@
       grid-row: 5;
       grid-column: 3 / 5;
       width: 120%;
+      box-shadow: 0 5px 20px rgba(30, 40, 45, 0.6);
     }
 
     &_img--2 {
       grid-row: 6;
       grid-column: 5 / 7;
       z-index: 20;
+      box-shadow: 0 5px 20px rgba(30, 40, 45, 0.6);
     }
   }
 
@@ -152,8 +175,8 @@
   }
 
   &_excerpt {
-    grid-row: 2;
-    grid-column: 4 / -1;
+    grid-row: 4;
+    grid-column: 4 / 7;
   }
 }
 
@@ -167,7 +190,7 @@
   &_text {
     max-width: 50rem;
     display: grid;
-  
+
     align-self: center;
     justify-self: center;
     grid-row-gap: 2rem;
@@ -178,28 +201,21 @@
     padding: 2rem;
 
     display: grid;
-    grid-template-rows: repeat(5, 1fr);
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(9, 1fr);
+    grid-template-columns: repeat(9, 1fr);
     grid-auto-rows: auto;
 
-    &_image { 
+    &_image {
       grid-area: 1 / 1 / -1 / -1;
     }
 
     &_image img {
-
-
       object-fit: cover;
       height: 100%;
-
     }
 
-    .slides {
-      display: none;
-    }
-
-    .next {
-      grid-row: 3;
+    &_next {
+      grid-row: 5;
       grid-column: 1;
       font-size: 10rem;
       color: var(--light);
@@ -214,14 +230,21 @@
       &::selection {
         background: none;
       }
+
+      &::hover,
+      &::active {
+        background: darkred;
+      }
+    }
+
+    .slides, .number {
+      display: none;
     }
 
     .number {
-      grid-row: 5;
-      grid-column: 5;
-      font-size: 15rem;
-      font-family: Arial, Helvetica, sans-serif;
-      color: orangered;
+      grid-row: 1 / span 6;
+      grid-column: 1 /span 3;
+      color: white;
     }
   }
 }
@@ -229,7 +252,7 @@
 // MULTIMEDIA F
 .multimedia-f {
   background: linear-gradient(55deg, #1c586e42 0%, #80464633 85%),
-    no-repeat center url(../img/kart-closeup_8416.jpg);
+    no-repeat center url(../img/placeholder/klubben-ute.png);
   background-size: cover;
 
   display: grid;
