--- a/sass/main.css
+++ b/sass/main.css
@@ -31,6 +31,14 @@ video {
   opacity: 0 !important;
 }
 
+.visible {
+  display: initial !important;
+}
+
+.not-visible {
+  display: none !important;
+}
+
 .sticky {
   position: fixed !important;
 }
@@ -51,6 +59,30 @@ video {
   --ease: all 0.5s ease;
   -webkit-transition: var(--ease);
   transition: var(--ease);
+}
+
+@-webkit-keyframes bounce {
+  0% {
+    bottom: 22%;
+  }
+  50% {
+    bottom: 25%;
+  }
+  100% {
+    bottom: 22%;
+  }
+}
+
+@keyframes bounce {
+  0% {
+    bottom: 22%;
+  }
+  50% {
+    bottom: 25%;
+  }
+  100% {
+    bottom: 22%;
+  }
 }
 
 /*
@@ -108,15 +140,15 @@ html {
   font-size: 62.5%;
 }
 
+@media only screen and (max-width: 75em) {
+  html {
+    font-size: 50%;
+  }
+}
+
 body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-}
-
-@media only screen and (max-width: 75em) {
-  body {
-    font-size: 50%;
-  }
 }
 
 .page-loader {
@@ -150,6 +182,15 @@ body {
 
 
 */
+::-moz-selection {
+  background: darkred;
+  color: white;
+}
+::selection {
+  background: darkred;
+  color: white;
+}
+
 .headline--s, .headline--m, .headline--l, .headline--xl {
   text-align: center;
   font-family: 'Oswald', sans-serif;
@@ -172,9 +213,10 @@ body {
 .headline--xl {
   font-size: 14rem;
   color: white;
+  letter-spacing: .1rem;
 }
 
-.text--s, .text--m {
+.text--s, .text--m, .text--l {
   font-family: 'Open Sans';
 }
 
@@ -195,66 +237,30 @@ body {
   font-size: 5rem;
 }
 
-.quote--m {
-  font-size: 3.5rem;
-  line-height: 160%;
+.quote--s, .quote--m, .quote--l {
   color: white;
   font-weight: 600;
   text-align: right;
   z-index: 50;
   text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.5);
+  font-family: 'Anton', sans-serif;
+  font-weight: 400;
 }
 
-/*
-.header_landing {
+.quote--m {
+  font-size: 3.5rem;
+  line-height: 160%;
+}
 
-  background: black;
-  position: sticky;
-  top: 0;
-  height: 100vh;
-  display: grid;
-  overflow: hidden;
-  z-index: -10;
+.quote--l {
+  font-size: 4.5rem;
+  line-height: 120%;
+}
 
-  &_video {
-    grid-area: 1 / 1 / -1 / -1;
-    min-width: 100%;
-    min-height: 100%;
-    object-fit: cover;
-    z-index: -5;
-  }
-
-  &_text {
-    grid-area: 1 / 1 / -1 / -1;
-    display: grid;
-    justify-content: center;
-    align-content: center;
-    text-align: center;
-    z-index: -3;
-
-    &::before {
-      content: "";
-      position: absolute;
-      top: 0; 
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: no-repeat center url(../img/placeholder/us-flag.svg);
-      background-size: cover;
-      grid-area: 1 / 1 / -1 / -1;
-      z-index: -1;
-      opacity: .3;
-    }
-
-    &_subtitle {
-      color: black;
-    }
-  }
-}*/
 .header_landing {
   background: black;
   top: 0;
-  height: 200vh;
+  height: 120vh;
   display: -ms-grid;
   display: grid;
   overflow: hidden;
@@ -365,6 +371,17 @@ body {
   font-weight: 400;
 }
 
+.scroll-indicator {
+  width: 7rem;
+  color: white;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translate(-50%);
+          transform: translate(-50%);
+  -webkit-animation: bounce 2.5s infinite;
+          animation: bounce 2.5s infinite;
+}
+
 .introduction {
   padding: 20rem 0rem;
   display: -ms-grid;
@@ -379,7 +396,10 @@ body {
 }
 
 .introduction_text {
-  max-width: 50rem;
+  max-width: 80rem;
+  text-align: center;
+  line-height: 150%;
+  font-weight: 600;
 }
 
 .multimedia-a {
@@ -422,6 +442,13 @@ body {
   z-index: 20;
 }
 
+@media only screen and (max-width: 75em) {
+  .multimedia-a_media {
+    -ms-grid-rows: (minmax(10rem, 10rem))[5];
+        grid-template-rows: repeat(5, minmax(10rem, 10rem));
+  }
+}
+
 .multimedia-a_text {
   padding: 20rem 0rem;
   display: -ms-grid;
@@ -431,6 +458,12 @@ body {
   -ms-grid-column-align: left;
       justify-self: left;
   grid-row-gap: 2rem;
+}
+
+@media only screen and (max-width: 75em) {
+  .multimedia-a_text {
+    padding: 1rem 0rem;
+  }
 }
 
 .multimedia-b {
@@ -455,11 +488,17 @@ body {
 }
 
 .multimedia-b_excerpt {
-  margin: 10rem 0rem;
+  margin: 50% 0rem;
   max-width: 45rem;
   padding: 1.5rem;
   -ms-grid-column-align: right;
       justify-self: right;
+}
+
+@media only screen and (max-width: 75em) {
+  .multimedia-b_excerpt {
+    margin: 2rem 0rem;
+  }
 }
 
 .multimedia-c {
@@ -482,7 +521,7 @@ body {
 
 .multimedia-c_text {
   padding: 15rem 0rem;
-  max-width: 40rem;
+  max-width: 50rem;
   display: -ms-grid;
   display: grid;
   -ms-grid-row-align: center;
@@ -522,6 +561,8 @@ body {
   -ms-grid-column-span: 2;
   grid-column: 3 / 5;
   width: 120%;
+  -webkit-box-shadow: 0 5px 20px rgba(30, 40, 45, 0.6);
+          box-shadow: 0 5px 20px rgba(30, 40, 45, 0.6);
 }
 
 .multimedia-d_media_img--2 {
@@ -531,6 +572,8 @@ body {
   -ms-grid-column-span: 2;
   grid-column: 5 / 7;
   z-index: 20;
+  -webkit-box-shadow: 0 5px 20px rgba(30, 40, 45, 0.6);
+          box-shadow: 0 5px 20px rgba(30, 40, 45, 0.6);
 }
 
 .multimedia-d_text {
@@ -545,9 +588,11 @@ body {
 }
 
 .multimedia-d_excerpt {
-  -ms-grid-row: 2;
-  grid-row: 2;
-  grid-column: 4 / -1;
+  -ms-grid-row: 4;
+  grid-row: 4;
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 3;
+  grid-column: 4 / 7;
 }
 
 .multimedia-e {
@@ -577,10 +622,10 @@ body {
   padding: 2rem;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: (1fr)[5];
-      grid-template-rows: repeat(5, 1fr);
-  -ms-grid-columns: (1fr)[5];
-      grid-template-columns: repeat(5, 1fr);
+  -ms-grid-rows: (1fr)[9];
+      grid-template-rows: repeat(9, 1fr);
+  -ms-grid-columns: (1fr)[9];
+      grid-template-columns: repeat(9, 1fr);
   grid-auto-rows: auto;
 }
 
@@ -594,13 +639,9 @@ body {
   height: 100%;
 }
 
-.multimedia-e_media .slides {
-  display: none;
-}
-
-.multimedia-e_media .next {
-  -ms-grid-row: 3;
-  grid-row: 3;
+.multimedia-e_media_next {
+  -ms-grid-row: 5;
+  grid-row: 5;
   -ms-grid-column: 1;
   grid-column: 1;
   font-size: 10rem;
@@ -619,26 +660,34 @@ body {
           justify-content: center;
 }
 
-.multimedia-e_media .next::-moz-selection {
+.multimedia-e_media_next::-moz-selection {
   background: none;
 }
 
-.multimedia-e_media .next::selection {
+.multimedia-e_media_next::selection {
   background: none;
+}
+
+.multimedia-e_media_next::hover, .multimedia-e_media_next::active {
+  background: darkred;
+}
+
+.multimedia-e_media .slides, .multimedia-e_media .number {
+  display: none;
 }
 
 .multimedia-e_media .number {
-  -ms-grid-row: 5;
-  grid-row: 5;
-  -ms-grid-column: 5;
-  grid-column: 5;
-  font-size: 15rem;
-  font-family: Arial, Helvetica, sans-serif;
-  color: orangered;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 6;
+  grid-row: 1 / span 6;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-column: 1 /span 3;
+  color: white;
 }
 
 .multimedia-f {
-  background: linear-gradient(55deg, #1c586e42 0%, #80464633 85%), no-repeat center url(../img/kart-closeup_8416.jpg);
+  background: linear-gradient(55deg, #1c586e42 0%, #80464633 85%), no-repeat center url(../img/placeholder/klubben-ute.png);
   background-size: cover;
   display: -ms-grid;
   display: grid;
